myapp/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-service
  name: myapp-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: myapp
  type: ClusterIP
