myapp/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-signin: http://houseproject.internal/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://houseproject.internal/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
spec:
  rules:
#    - host: houseproject.internal
    - http:
        paths:
          - path: /myapp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: myapp-service
                port:
                  number: 5000
